@@ -1096,4 +1096,5 @@
 - API: Added DockStationDropLayerFactory, a way for clients to define which areas of the screen can be targets for drag-and-drop operations
 
 [v1.1.2p17a]
-- Bugfix: when moving around a working-area, the are could not be stacked with normal dockables because the WorkingAreaAcceptance believed that the working-area can only be combined with itself 
+- Bugfix: when moving around a working-area, the are could not be stacked with normal dockables because the WorkingAreaAcceptance believed that the working-area can only be combined with itself
+- Bugfix: when calling CDockable.setLocationAside an exception could be thrown if a PlaceholderMap with the wrong format was stored in the layout. Maps with the wrong format are now silently ignored 
